Improved table view.

--- a/src/Club/BookingBundle/Resources/views/AdminField/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminField/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('club_booking_adminfield_new') }}" class="btn-create"><span>{% trans %}Create field{% endtrans %}</span></a></p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Location{% endtrans %}</th>
