--- a/src/Club/BookingBundle/Resources/views/AdminInterval/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminInterval/index.html.twig
@@ -6,7 +6,7 @@
   <a href="{{ path('club_booking_admininterval_manage', {'field_id':field.id}) }}" class="btn-create"><span>{% trans %}Manage intervals{% endtrans %}</span></a>
 </p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Location{% endtrans %}</th>
