--- a/src/Club/BookingBundle/Resources/views/Dashboard/booking_table.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Dashboard/booking_table.html.twig
@@ -1,6 +1,6 @@
 <h2>{% trans %}Your bookings{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Date{% endtrans %}</th>
