--- a/src/Club/LogBundle/Resources/views/Dashboard/log_table.html.twig
+++ b/src/Club/LogBundle/Resources/views/Dashboard/log_table.html.twig
@@ -1,6 +1,6 @@
 <h2>{% trans %}Recent logs{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Read{% endtrans %}</th>
