--- a/src/Club/LogBundle/Resources/views/PhpLog/logs.html.twig
+++ b/src/Club/LogBundle/Resources/views/PhpLog/logs.html.twig
@@ -1,9 +1,9 @@
 <h2>{% trans %}PHP Log{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
-      <th>{% trans %}Date{% endtrans %}</th>
+      <th width="120">{% trans %}Date{% endtrans %}</th>
       <th>{% trans %}Type{% endtrans %}</th>
       <th>{% trans %}Severity{% endtrans %}</th>
       <th>{% trans %}Message{% endtrans %}</th>
