--- a/src/Club/MatchBundle/Resources/views/AdminLeague/users.html.twig
+++ b/src/Club/MatchBundle/Resources/views/AdminLeague/users.html.twig
@@ -17,7 +17,7 @@
   </fieldset>
 </form>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Number{% endtrans %}</th>
