--- a/src/Club/MatchBundle/Resources/views/League/Top.html.twig
+++ b/src/Club/MatchBundle/Resources/views/League/Top.html.twig
@@ -1,5 +1,5 @@
 <h4>{% trans %}Ranking{% endtrans %}</h4>
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Rank{% endtrans %}</th>
