--- a/src/Club/MatchBundle/Resources/views/League/show.html.twig
+++ b/src/Club/MatchBundle/Resources/views/League/show.html.twig
@@ -7,7 +7,7 @@
 <h3><a href="{{ path('club_match_league_show', {'id':league.id}) }}">{{ league.name }}</a></h3>
 
 <h4>{% trans %}League info{% endtrans %}</h4>
-<table class="style">
+<table class="table">
   <tbody>
     <tr>
       <th>{% trans %}Period{% endtrans %}</th>
