--- a/src/Club/MatchBundle/Resources/views/Match/show.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Match/show.html.twig
@@ -11,7 +11,7 @@
 </p>
 {% endif %}
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Date{% endtrans %}</th>
