--- a/src/Club/MessageBundle/Resources/views/AdminMessage/attachment.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/attachment.html.twig
@@ -13,7 +13,7 @@
 <fieldset>
   <legend>{% trans %}Attachments{% endtrans %}</legend>
   <p>{% trans %}Here is a list of files which is attached to the message.{% endtrans %}</p>
-  <table class="style">
+  <table class="table">
     <thead>
       <tr>
         <th>{% trans %}File name{% endtrans %}</th>
