--- a/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
@@ -5,7 +5,7 @@
   <a href="{{ path('club_message_adminmessage_new') }}" class="btn-create"><span>{% trans %}Create message{% endtrans %}</span></a>
 </p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Created at{% endtrans %}</th>
