--- a/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
@@ -11,7 +11,7 @@
 <fieldset>
   <legend>{% trans %}Recipients{% endtrans %}</legend>
 
-  <table class="style">
+  <table class="table">
     <thead>
       <tr>
         <th width="80">{% trans %}Type{% endtrans %}</th>
