--- a/src/Club/PasskeyBundle/Resources/views/AdminPasskey/index.html.twig
+++ b/src/Club/PasskeyBundle/Resources/views/AdminPasskey/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('club_passkey_adminpasskey_new') }}" class="btn-create"><span>{% trans %}Create passkey{% endtrans %}</span></a></p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Key{% endtrans %}</th>
