--- a/src/Club/ShopBundle/Resources/views/AdminCoupon/log.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCoupon/log.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h2>{% trans %}Coupon log{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Coupon{% endtrans %}</th>
