--- a/src/Club/ShopBundle/Resources/views/Order/order_form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Order/order_form.html.twig
@@ -1,6 +1,6 @@
 <h2>{% trans %}Products{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
   <tr>
     <th width="250">{% trans %}Product name{% endtrans %}</th>
