--- a/src/Club/ShopBundle/Resources/views/Order/order_history.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Order/order_history.html.twig
@@ -1,5 +1,5 @@
 <h2>{% trans %}Order history{% endtrans %}</h2>
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Date{% endtrans %}</th>
