--- a/src/Club/ShopBundle/Resources/views/Order/purchase_log.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Order/purchase_log.html.twig
@@ -1,6 +1,6 @@
 {% if order.purchaseLog|length > 0 %}
 <h2>{% trans %}Purchase Log{% endtrans %}</h2>
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Date{% endtrans %}</th>
