--- a/src/Club/ShopBundle/Resources/views/Subscription/pause_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/pause_table.html.twig
@@ -1,7 +1,7 @@
 <h2>Pause</h2>
 
 {% set pause_left = subscription.getStartPauses %}
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>Date</th>
