--- a/src/Club/ShopBundle/Resources/views/Subscription/show.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/show.html.twig
@@ -4,7 +4,7 @@
 
 <h2>{% trans %}Subscription{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <tbody>
     <tr>
       <th>{% trans %}Day bought{% endtrans %}</th>
