--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/participant.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/participant.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h2>{% trans %}Attends{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Team{% endtrans %}</th>
