--- a/src/Club/TeamBundle/Resources/views/Team/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/Team/index.html.twig
@@ -7,7 +7,7 @@
 {% if schedules|length == 0 %}
 <p class="msg info">{% trans %}There are no teams.{% endtrans %}</p>
 {% else %}
-<table class="style">
+<table class="table">
   <tfoot>
     <tr class="bg">
       <td colspan="4">&#160;</td>
