--- a/src/Club/UserBundle/Resources/views/AdminGroup/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/index.html.twig
@@ -6,7 +6,7 @@
   <a href="{{ path('admin_group_new') }}" class="btn-info"><span>{% trans %}Create group{% endtrans %}</span></a>
 </p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Group{% endtrans %}</th>
