--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -31,7 +31,7 @@ $(document).ready(function() {
 <div>
 [ <a href="{{ path('club_user_adminuser_csv') }}">{% trans %}Export CSV{% endtrans %}</a> ]
 <form method="post" action="{{ path('admin_user_batch') }}">
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th><input type="checkbox" id="select_all" /></th>
