--- a/src/Club/UserBundle/Resources/views/AdminUserImport/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUserImport/index.html.twig
@@ -9,7 +9,7 @@
 </form>
 
 <h2>{% trans %}Explation{% endtrans %}</h2>
-<table class="style">
+<table class="table">
   <tbody>
     <tr>
       <th>{% trans %}Member number{% endtrans %}</th>
