--- a/src/Club/UserBundle/Resources/views/Currency/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Currency/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('admin_currency_new') }}" class="btn-create"><span>{% trans %}Create currency{% endtrans %}</span></a></p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Currency{% endtrans %}</th>
