--- a/src/Club/UserBundle/Resources/views/Dashboard/user_table.html.twig
+++ b/src/Club/UserBundle/Resources/views/Dashboard/user_table.html.twig
@@ -1,6 +1,6 @@
 <h2>{% trans %}New users{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Number{% endtrans %}</th>
