--- a/src/Club/UserBundle/Resources/views/LoginLog/logs.html.twig
+++ b/src/Club/UserBundle/Resources/views/LoginLog/logs.html.twig
@@ -1,6 +1,6 @@
 <h2>{% trans %}Login Log{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Id{% endtrans %}</th>
