--- a/src/Club/UserBundle/Resources/views/Member/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Member/index.html.twig
@@ -22,7 +22,7 @@
 
 <div class="fix" style="height: 10px;"></div>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Number{% endtrans %}</th>
