--- a/src/Club/WelcomeBundle/Resources/views/AdminBlog/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/AdminBlog/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('club_welcome_adminblog_new') }}" class="btn-create"><span>{% trans %}Create post{% endtrans %}</span></a></p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Author{% endtrans %}</th>
