--- a/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('club_booking_adminplan_new') }}" class="btn-create"><span>{% trans %}Create plan{% endtrans %}</span></a></p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Name{% endtrans %}</th>
