--- a/src/Club/CheckinBundle/Resources/views/AdminCheckin/index.html.twig
+++ b/src/Club/CheckinBundle/Resources/views/AdminCheckin/index.html.twig
@@ -4,7 +4,7 @@
 
 <h2>{% trans %}Checkin{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}User{% endtrans %}</th>
