--- a/src/Club/MatchBundle/Resources/views/AdminRule/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/AdminRule/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('club_match_adminrule_new') }}" class="btn-create"><span>{% trans %}Create rule{% endtrans %}</span></a></p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Name{% endtrans %}</th>
