--- a/src/Club/RequestBundle/Resources/views/Comment/index.html.twig
+++ b/src/Club/RequestBundle/Resources/views/Comment/index.html.twig
@@ -8,7 +8,7 @@
 </p>
 {% endif %}
 
-<table class="style">
+<table class="table">
   <tbody>
     <tr>
       <th>{% trans %}Play time{% endtrans %}</th>
