--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
@@ -11,7 +11,7 @@
 <h2>{% trans %}Player market{% endtrans %}</h2>
 
 <p>{% trans %}If you want to go play but dont have a partner, you can write in a timestamp here when you can play. Other can contact you and you can meet up and play a game.{% endtrans %}</p>
-<table class="style">
+<table class="table">
   <thead>
     <tr class="bg">
       <th>{% trans %}Play time{% endtrans %}</th>
