--- a/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
@@ -15,7 +15,7 @@
 
 <div class="fix" style="height: 10px;"></div>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Order number{% endtrans %}</th>
