--- a/src/Club/ShopBundle/Resources/views/AdminSpecial/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSpecial/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('club_shop_adminspecial_new') }}" class="btn-create"><span>{% trans %}Create special{% endtrans %}</span></a></p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Product{% endtrans %}</th>
