--- a/src/Club/ShopBundle/Resources/views/Dashboard/admin_order_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Dashboard/admin_order_table.html.twig
@@ -1,6 +1,6 @@
 <h2>{% trans %}Open orders{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Order number{% endtrans %}</th>
