--- a/src/Club/ShopBundle/Resources/views/Subscription/tickets_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/tickets_table.html.twig
@@ -1,7 +1,7 @@
 <h2>Ticket</h2>
 
 {% set tickets_left = subscription.getStartTickets %}
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>Date</th>
