--- a/src/Club/TeamBundle/Resources/views/AdminLevel/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminLevel/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('club_team_adminlevel_new') }}" class="btn-create"><span>{% trans %}Create level{% endtrans %}</span></a></p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Name{% endtrans %}</th>
