--- a/src/Club/TeamBundle/Resources/views/Dashboard/member_table.html.twig
+++ b/src/Club/TeamBundle/Resources/views/Dashboard/member_table.html.twig
@@ -1,6 +1,6 @@
 <h2>{% trans %}Attended teams{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Team{% endtrans %}</th>
