--- a/src/Club/TournamentBundle/Resources/views/AdminTournament/index.html.twig
+++ b/src/Club/TournamentBundle/Resources/views/AdminTournament/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('club_tournament_admintournament_new') }}" class="btn-create"><span>{% trans %}Create tournament{% endtrans %}</span></a></p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Name{% endtrans %}</th>
