--- a/src/Club/UserBundle/Resources/views/AdminGroup/members.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/members.html.twig
@@ -4,7 +4,7 @@
 
 <h2>{% trans with {'%group%':group.groupName} %}Members of %group%{% endtrans %}</h2>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Number{% endtrans %}</th>
