Made new alert buttons.

--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -21,6 +21,7 @@
         <script type="text/javascript" src="{{ asset('bundles/clublayout/js/toggle.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/clublayout/js/iso8601.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-ui-1.8.18.custom.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/bootstrap.min.js') }}"></script>
         <script type="text/javascript">
         $(document).ready(function(){
           $(".tabs > ul").tabs();
