--- a/src/Club/LayoutBundle/Resources/views/Default/flash.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/flash.html.twig
@@ -1,15 +1,27 @@
 {% if app.session.hasFlash('notice') %}
-<p class="msg done">{{ app.session.flash('notice') }}</p>
+<div class="alert alert-success">
+    <h4>{% trans %}Well done!{% endtrans %}</h4>
+    {{ app.session.flash('notice') }}
+</div>
 {% endif %}
 
 {% if app.session.hasFlash('error') %}
-<p class="msg error">{{ app.session.flash('error') }}</p>
+<div class="alert alert-error">
+    <h4>{% trans %}Oh snap!{% endtrans %}</h4>
+    {{ app.session.flash('error') }}
+</div>
 {% endif %}
 
 {% if app.session.hasFlash('warning') %}
-<p class="msg warning">{{ app.session.flash('warning') }}</p>
+<div class="alert alert-block">
+    <h4>{% trans %}Warning!{% endtrans %}</h4>
+    {{ app.session.flash('warning') }}
+</div>
 {% endif %}
 
 {% if app.session.hasFlash('info') %}
-<p class="msg info">{{ app.session.flash('info') }}</p>
+<div class="alert alert-info">
+    <h4>{% trans %}Heads up!{% endtrans %}</h4>
+    {{ app.session.flash('info') }}
+</div>
 {% endif %}
