--- a/src/Club/ShopBundle/Resources/views/AdminProduct/noCategory.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProduct/noCategory.html.twig
@@ -3,5 +3,5 @@
 {% block body %}
 <p class="box"><a href="{{ path('admin_shop_category_new') }}" class="btn-create"><span>Create category</span></a></p>
 
-<p class="msg error">You cannot add any products without a category.</p>
+{% include "ClubLayoutBundle:Default:flash_error.html.twig" with {'msg':'You cannot add any products without a category.'|trans} %}
 {% endblock %}
