--- a/src/Club/TeamBundle/Resources/views/Team/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/Team/index.html.twig
@@ -5,7 +5,8 @@
 <h2>{% trans %}Team{% endtrans %}</h2>
 
 {% if schedules|length == 0 %}
-<p class="msg info">{% trans %}There are no teams.{% endtrans %}</p>
+{% include "ClubLayoutBundle:Default:flash_info.html.twig" with {'msg':'There are no teams.'|trans} %}
+
 {% else %}
 <table class="table">
   <tfoot>
