--- a/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
@@ -4,8 +4,7 @@
         <div id="login-box">
 
                 {% include "ClubLayoutBundle:Default:flash.html.twig" %}
-
-                <p class="msg info">Enter your new password below.</p>
+                {% include "ClubLayoutBundle:Default:flash_info.html.twig" with {'msg':'Enter your new password below.'|trans} %}
 
                 <!-- Form -->
                 <form method="POST" action="{{ path('auth_reset', {'hash':forgot.hash}) }}">
