--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -7,8 +7,8 @@
     <meta name="author" content="Michael Holm">
 
     <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/bootstrap.min.css') }}" />
-    <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/mystyle.css') }}" /> <!-- WRITE YOUR CSS CODE HERE -->
-    <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/ui-lightness/jquery-ui-1.8.18.custom.css') }}" /> <!-- JQUERY -->
+    <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/ui-lightness/jquery-ui-1.8.23.custom.css') }}" />
+    <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/mystyle.css') }}" />
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -24,10 +24,10 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-1.7.2.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-ui-1.8.18.custom.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('bundles/clublayout/js/iso8601.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/clublayout/js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-1.8.0.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-ui-1.8.23.custom.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/clublayout/js/iso8601.js') }}"></script>
     <script type="text/javascript">
     $(document).ready(function(){
       $('#login_username').click(function() {
@@ -65,11 +65,9 @@
       </div><!--/row-fluid -->
 
       <hr>
-
       <footer>
           <p><a href="http://www.clubmaster.org" target="_open">ClubMaster</a>, {% render "ClubUserBundle:Misc:versionBar" %}</p>
       </footer>
-
     </div><!--/container-fluid -->
 
 </body>
