--- a/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
@@ -2,34 +2,26 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
           <div class="nav-collapse collapse">
-                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                <p class="navbar-text pull-right">
-                Logged in as <a href="#" class="navbar-link">{{ app.user }}</a>,
-                <a href="{{ path('logout') }}" id="logout">{% trans %}log out{% endtrans %}</a>
-                </p>
-                {% endif %}
+             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
 
-                <ul class="nav">
-                    {% for item in menu %}
-                    <li {% if app.request.attributes.get('_route') == item.route %} class="active"{% endif %}>
-                    <a href="{{ item.route }}">{{ item.name }}</a>
-                    </li>
+             <p class="navbar-text pull-right">
+                {% for item in menu_right %}
+                <a href="{{ item.route }}"><span>{{ item.name }}</span></a>
                 {% endfor %}
-                </ul>
+             </p>
+             {% endif %}
+
+             <ul class="nav">
+                {% for item in menu %}
+                <li {% if app.request.attributes.get('_route') == item.route %} class="active"{% endif %}>
+                <a href="{{ item.route }}">{{ item.name }}</a>
+                </li>
+                {% endfor %}
+            </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
 
-            {% for item in menu_right %}
-            <li><a href="{{ item.route }}"><span><strong>{{ item.name }}</strong></span></a></li>
-            {% endfor %}
 
-          </ul>
-        </div>
