Fixed a bug with a single css file.

--- a/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
@@ -1,7 +1,12 @@
-    <!-- Menu -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">ClubMaster</a>
           <div class="nav-collapse collapse">
              {% if is_granted('IS_AUTHENTICATED_FULLY') %}
 
@@ -23,5 +28,4 @@
         </div>
       </div>
     </div>
-
 
