--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -7,8 +7,8 @@
     <meta name="author" content="Michael Holm">
 
     <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/bootstrap.min.css') }}" />
-    <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/ui-lightness/jquery-ui-1.8.23.custom.css') }}" />
-    <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/mystyle.css') }}" />
+    <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/ui-lightness/jquery-ui-1.8.23.custom.css') }}" />
+    <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/mystyle.css') }}" />
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -18,16 +18,17 @@
         padding: 9px 0;
       }
     </style>
+    <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/bootstrap-responsive.min.css') }}" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <script type="text/javascript" src="{{ asset('bundles/clublayout/js/bootstrap.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-1.8.0.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-ui-1.8.23.custom.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/clublayout/js/iso8601.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/clublayout/js/bootstrap.min.js') }}"></script>
     <script type="text/javascript">
     $(document).ready(function(){
       $('#login_username').click(function() {
