Started to fix header block.

--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -5,6 +5,8 @@
     <title>{% block title %}ClubMaster{% endblock %}</title>
     <meta name="description" content="ClubMaster is an open source management tool">
     <meta name="author" content="Michael Holm">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
     <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/ui-lightness/jquery-ui-1.8.23.custom.css') }}" />
@@ -18,7 +20,6 @@
         padding: 9px 0;
       }
     </style>
-    <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/bootstrap-responsive.min.css') }}" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
