Only view wells if allowed.

--- a/src/Club/MenuBundle/Resources/views/Default/leftMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/leftMenu.html.twig
@@ -1,3 +1,4 @@
+{% if menu|length > 0 %}
 <div class="well sidebar-nav">
     <ul class="nav nav-list">
 
@@ -13,3 +14,4 @@
         {% endfor %}
     </ul>
 </div><!--/.well -->
+{% endif %}
