--- a/src/Club/LayoutBundle/Resources/views/Default/base_simple.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base_simple.html.twig
@@ -62,7 +62,10 @@
                 <!-- Content (Right Column) -->
                 <div id="content" class="box">
 
-                        {% block header %}<h1>ClubMaster</h1>{% endblock %}
+                        {% block header %}
+                        <div class="page-header">
+                            <h1>ClubMaster</h1>{% endblock %}
+                        </div>
                         {% include 'ClubLayoutBundle:Default:flash.html.twig' %}
 
                         {% block body %}{% endblock %}
