--- a/src/Club/LayoutBundle/Resources/views/Ng/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Ng/base.html.twig
@@ -112,7 +112,10 @@
                 <!-- Content (Right Column) -->
                 <div id="content" class="box">
 
-                        {% block header %}<h1>ClubMaster</h1>{% endblock %}
+                        {% block header %}
+                        <div class="page-header">
+                            <h1>ClubMaster</h1>{% endblock %}
+                        </div>
                         {% if is_granted('ROLE_ADMIN') %}
                           {% block logger %}{% render "ClubLogBundle:Log:LogView" %}{% endblock %}
                         {% endif %}
