--- a/src/Club/WelcomeBundle/Resources/views/base.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/base.html.twig
@@ -1,3 +1,7 @@
 {% extends "ClubLayoutBundle::base.html.twig" %}
 
-{% block header %}<h1>{% trans %}Welcome{% endtrans %}</h1>{% endblock %}
+{% block header %}
+<div class="page-header">
+    <h1>{% trans %}Welcome{% endtrans %}</h1>
+</div>
+{% endblock %}
