--- a/src/Club/LayoutBundle/Resources/views/Default/user_form.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/user_form.html.twig
@@ -1,6 +1,6 @@
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <div class="well sidebar-nav">
-                Logged in as <a href="#" class="navbar-link">{{ app.user }}</a>,
+            <div class="well">
+                Logged in as <a href="{{ url('user') }}" class="navbar-link">{{ app.user }}</a>,
                 <a href="{{ path('logout') }}" id="logout">{% trans %}log out{% endtrans %}</a>
             </div>
             {% endif %}
