--- a/src/Club/LayoutBundle/Resources/views/Default/login_form.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/login_form.html.twig
@@ -1,13 +1,15 @@
             {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
-            <div class="well sidebar-nav">
+            <div class="well">
                 <!-- Login form -->
-                <form method="post" action="{{ path('login_check') }}" id="search">
+                <form method="post" action="{{ path('login_check') }}">
+
                 <fieldset>
                     <legend>{% trans %}Login{% endtrans %}</legend>
-                    <p><input type="text" class="input-text" name="_username" id="login_username" placeholder="{% trans %}Member number{% endtrans %}" /></p>
-                    <p><input type="password" class="input-text" name="_password" placeholder="{% trans %}Password{% endtrans %}" /></p>
-                    <p><input type="submit" value="{% trans %}Login{% endtrans %}" class="input-submit-02" /></p>
+                    <p><input type="text" name="_username" id="login_username" placeholder="{% trans %}Member number{% endtrans %}" /></p>
+                    <p><input type="password" name="_password" placeholder="{% trans %}Password{% endtrans %}" /></p>
+                    <p><button type="submit" class="btn btn-primary">{% trans %}Login{% endtrans %}</button></p>
                 </fieldset>
+
             </form>
             </div>
             {% endif %}
