--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
@@ -3,12 +3,14 @@
 {% block body %}
 
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-<p class="box">
-  <a href="{{ path('club_request_playermarket_new') }}" class="btn-info"><span>{% trans %}Create request{% endtrans %}</span></a>
-</p>
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('club_request_playermarket_new') }}">{% trans %}Create request{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
 {% endif %}
-
-<h2>{% trans %}Player market{% endtrans %}</h2>
 
 <p>{% trans %}If you want to go play but dont have a partner, you can write in a timestamp here when you can play. Other can contact you and you can meet up and play a game.{% endtrans %}</p>
 <table class="table">
